# ToyCppLib

./: CMakeLists.txt  README.md
example/: test.cpp
include/: counter.hpp  type_id.hpp
